# prompt-eval-workbench

./: .env.example  .gitignore  README.md  app.py  benchmark.py  benchmark_data.json  chat_logic.py  package-lock.json  package.json  promptfoo-results.json  promptfooconfig.yaml  pyproject.toml  requirements.txt  sync_promptfoo_to_langfuse.py
config/: promptfooconfig.yaml
docs/: ARCHITECTURE.md
docs/presentation/: index.html
prompt_eval_workbench/: __init__.py  benchmark.py  benchmark_scores.py  promptfoo_sync.py
promptfoo/: STEPS.txt
promptfoo/prompts/: assistant.txt
promptfoo/tests/: smoke.yaml
tests/: test_benchmark.py  test_chat_logic.py  test_sync_promptfoo.py
